--- a/Metrics-Analyzer/Metrics-Analyzer.csproj
+++ b/Metrics-Analyzer/Metrics-Analyzer.csproj
@@ -6,7 +6,12 @@
     <RootNamespace>Metrics_Analyzer</RootNamespace>
     <ImplicitUsings>disable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <ApplicationIcon>app-icon.ico</ApplicationIcon>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Content Include="app-icon.ico" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
